@@ -31,6 +31,7 @@ use EBox::Users::Group;
 
 use EBox::Exceptions::LDAP;
 use EBox::Exceptions::DataExists;
+use EBox::Exceptions::InvalidData;
 use EBox::Exceptions::MissingArgument;
 
 use Perl6::Junction qw(any);
@@ -343,13 +344,25 @@ sub create
     my $fullname = $args{fullname};
     $fullname = $class->generatedFullName(%args) unless ($fullname);
 
+    unless ($fullname) {
+        throw EBox::Exceptions::InvalidData(
+            data => __('given name, initials, surname'),
+            value => __('empty'),
+            advice => __('Either given name, initials or surname must be non empty')
+        );
+    }
+
     my @attr = ();
     push (@attr, objectClass => 'inetOrgPerson');
     push (@attr, cn          => $fullname);
     push (@attr, givenName   => $args{givenname}) if ($args{givenname});
     push (@attr, initials    => $args{initials}) if ($args{initials});
     push (@attr, sn          => $args{surname}) if ($args{surname});
-    push (@attr, displayName => $args{displayname}) if ($args{displayname});
+    if ($args{displayname}) {
+        push (@attr, displayName => $args{displayname});
+    } else {
+        push (@attr, displayName => $fullname);
+    }
     push (@attr, description => $args{description}) if ($args{description});
     push (@attr, mail        => $args{mail}) if ($args{mail});
 
