@@ -1,4 +1,6 @@
 3.4
+	+ Stop changing users and contacts' cn field on object edition, allowed to
+	  edit the displayName field, just as Windows does
 	+ Disable OpenLDAP users sync in favor of Samba AD replication
 	+ Avoid warning when checking whether we are in the usercorner
 	+ Updated to use Plack / PSGI instead of mod_perl
